docs/v2.0.0/_sources/gallery/experiment/cylinder/cylinder_coupling_vs_phioffset.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/cylinder/cylinder_coupling_vs_phioffset.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_cylinder_cylinder_coupling_vs_phioffset.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_cylinder_cylinder_coupling_vs_phioffset.py:


Cylinder: Goniometer
====================

This example demonstrates how to use a goniometer setup to measure and visualize the coupling efficiency as a function of angular displacement for cylindrical scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-18

.. code-block:: Python

    import numpy as np
    from PyMieSim.experiment.detector import Photodiode
    from PyMieSim.experiment.scatterer import Cylinder
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material
    from PyMieSim.units import nanometer, degree, watt, AU, RIU








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Defining the source

.. GENERATED FROM PYTHON SOURCE LINES 20-27

.. code-block:: Python

    source = Gaussian(
        wavelength=1200 * nanometer,  # 1200 nm
        polarization=90 * degree,  # Polarization angle in degrees
        optical_power=1e-3 * watt,  # 1 milliwatt
        NA=0.2 * AU  # Numerical Aperture
    )








.. GENERATED FROM PYTHON SOURCE LINES 28-29

Defining the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 29-36

.. code-block:: Python

    scatterer = Cylinder(
        diameter=2000 * nanometer,  # 2000 nm
        property=Material.BK7,  # Material of the cylinder
        medium_property=1 * RIU,  # Refractive index of the surrounding medium
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 37-38

Defining the detector

.. GENERATED FROM PYTHON SOURCE LINES 38-46

.. code-block:: Python

    detector = Photodiode(
        NA=[0.5, 0.3, 0.1, 0.05] * AU,  # Array of Numerical Apertures for the detector
        phi_offset=np.linspace(-180, 180, 200) * degree,  # Angular displacement from -180 to 180 degrees
        gamma_offset=0 * degree,  # Gamma offset in degrees
        sampling=400 * AU,  # Number of sampling points
        polarization_filter=None  # No polarization filter
    )








.. GENERATED FROM PYTHON SOURCE LINES 47-48

Setting up the experiment

.. GENERATED FROM PYTHON SOURCE LINES 48-50

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)








.. GENERATED FROM PYTHON SOURCE LINES 51-52

Measuring the coupling efficiency

.. GENERATED FROM PYTHON SOURCE LINES 52-54

.. code-block:: Python

    dataframe = experiment.get('coupling', scale_unit=True)








.. GENERATED FROM PYTHON SOURCE LINES 55-57

Plotting the results
Visualizing how the coupling efficiency varies with angular displacement.

.. GENERATED FROM PYTHON SOURCE LINES 57-58

.. code-block:: Python

    dataframe.plot_data(x="detector:phi_offset")



.. image-sg:: /gallery/experiment/cylinder/images/sphx_glr_cylinder_coupling_vs_phioffset_001.png
   :alt: cylinder coupling vs phioffset
   :srcset: /gallery/experiment/cylinder/images/sphx_glr_cylinder_coupling_vs_phioffset_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='degree', ylabel='microwatt'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.500 seconds)


.. _sphx_glr_download_gallery_experiment_cylinder_cylinder_coupling_vs_phioffset.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cylinder_coupling_vs_phioffset.ipynb <cylinder_coupling_vs_phioffset.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cylinder_coupling_vs_phioffset.py <cylinder_coupling_vs_phioffset.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cylinder_coupling_vs_phioffset.zip <cylinder_coupling_vs_phioffset.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
